# gemini-bridge

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  NOTICE.md  README.md  SECURITY.md  docker-compose.yml  mise.toml  start.sh
dev/: upstream-sync.sh
examples/: anythingllm.env  open-webui.env  opencode.jsonc  zed.jsonc
extension/: background.js  manifest.json  popup.html  popup.js  providers.js
patches/: 0001-pr70-deps-and-config.patch  0002-pr67-streaming-merged.patch  0003-reinit-and-register-auth.patch  0004-add-auth-cookies-endpoint.patch  0005-webai-mode-always-available.patch  0006-guard-g4f-switch-when-not-installed.patch  0007-http-mode-switch.patch  0008-fallback-on-quota.patch
server/: config.conf.example  pyproject.toml  requirements.txt
server/src/: run.py
server/src/app/: config.py  guards.py  logger.py  main.py  settings.py
server/src/app/endpoints/: auth.py  chat.py  gemini.py
server/src/app/services/: account_discovery.py  fallback.py  gemini_client.py  gemini_wrapper.py  mode_control.py
server/src/app/utils/: browser.py
server/src/models/: gemini.py
server/src/schemas/: request.py
server/tests/: _helpers.py  conftest.py  test_account_discovery.py  test_account_routed_client.py  test_admin.py  test_bootstrap.py  test_browser.py  test_chat.py  test_chat_routing.py  test_compression.py  test_cors.py  test_env_resolvers.py  test_fallback.py  test_gems.py  test_map_gemini_error.py  test_models.py  test_persist_account_selector.py  test_persist_cookies.py  test_runtime.py  test_shim.py  test_wrapper_init_timeout.py
(+3 files in other folders)
