[tool.poetry]
name = "gemini-bridge"
version = "0.1.0"
description = "OpenAI-compatible API on top of gemini.google.com, with OpenRouter free-tier fallback."
authors = ["paddy <106592312+BorisLord@users.noreply.github.com>"]
license = "MIT"

packages = [
    { include = "app", from = "src" },
    { include = "models", from = "src" },
    { include = "schemas", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.136.1,<0.140.0"
browser-cookie3 = ">=0.20.1,<0.21.0"
httpx = ">=0.28.1,<0.29.0"
curl-cffi = ">=0.15.0,<0.16.0"
gemini-webapi = ">=2.0.0,<3.0.0"
uvicorn = {extras = ["standard"], version = ">=0.46.0,<0.50.0"}

pywin32 = { version = "==311", platform = "win32" }
pycryptodomex = { version = ">=3.23.0,<4.0.0", platform = "win32" }
tomli = "^2.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"