[project]
name = "gemini-bridge"
version = "0.1.0"
description = "OpenAI-compatible API on top of gemini.google.com."
authors = [
    { name = "Boris Lord", email = "106592312+BorisLord@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.136.1,<0.140.0",
    "browser-cookie3>=0.20.1,<0.21.0",
    "httpx>=0.28.1,<0.29.0",
    "curl-cffi>=0.15.0,<0.16.0",
    "gemini-webapi>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.46.0,<0.50.0",
    "tomli>=2.2.1",
]
